--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="../css/style.css">
 <title>Image Format Converter</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 <div class="container">
@@ -21,6 +21,6 @@
     <div id="output"></div>
     <img id="output-image" src="" alt="Output Image">
 </div>
-    <script src="../js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
